--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
 		"multiple field"
 	],
 	"homepage": "https://code.divandesign.biz/modx/mm_ddmultiplefields",
+	"support": {
+		"chat": "https://t.me/dd_code"
+	},
 	"authors": [
 		{
 			"name": "DD Group",
