--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
 		"mm_ddmultiplefields",
 		"multiple field"
 	],
-	"homepage": "https://code.divandesign.biz/modx/mm_ddmultiplefields",
+	"homepage": "https://code.divandesign.ru/modx/mm_ddmultiplefields",
 	"support": {
 		"chat": "https://t.me/dd_code"
 	},
 	"authors": [
 		{
 			"name": "DD Group",
-			"email": "code@DivanDesign.biz",
-			"homepage": "https://code.divandesign.biz",
+			"email": "code@DivanDesign.ru",
+			"homepage": "https://code.divandesign.ru",
 			"role": "Owner"
 		},
 		{
